// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/layout/extra-panel does not have a YouTube tab if not using YouTube 1`] = `
<section id="extra" class="showing">
  <div class="tabs">
    <div role="tablist" class="clear"><button aria-selected="true" aria-controls="extraPanelLyrics" id="extraTabLyrics" role="tab">
        Lyrics
      </button> <button aria-controls="extraPanelArtist" id="extraTabArtist" role="tab">
        Artist
      </button> <button aria-controls="extraPanelAlbum" id="extraTabAlbum" role="tab">
        Album
      </button>
      <!---->
    </div>
    <div class="panes">
      <div aria-labelledby="extraTabLyrics" id="extraPanelLyrics" role="tabpanel" tabindex="0">
        <article id="lyrics">
          <div class="content">
            <div style="display: none;">
              <div></div>
              <div class="text-zoomer"><button title="Zoom out"><i class="fa fa-search-minus"></i></button> <button title="Zoom in"><i class="fa fa-search-plus"></i></button></div>
            </div>
            <!---->
          </div>
        </article>
      </div>
      <div aria-labelledby="extraTabArtist" id="extraPanelArtist" role="tabpanel" tabindex="0" style="display: none;">
        <!---->
      </div>
      <div aria-labelledby="extraTabAlbum" id="extraPanelAlbum" role="tabpanel" tabindex="0" style="display: none;">
        <!---->
      </div>
      <div aria-labelledby="extraTabAlbum" id="extraPanelAlbum" role="tabpanel" tabindex="0" style="display: none;">
        <!---->
      </div>
    </div>
  </div>
</section>
`;

exports[`components/layout/extra-panel has a YouTube tab if using YouTube 1`] = `
<section id="extra" class="showing">
  <div class="tabs">
    <div role="tablist" class="clear"><button aria-selected="true" aria-controls="extraPanelLyrics" id="extraTabLyrics" role="tab">
        Lyrics
      </button> <button aria-controls="extraPanelArtist" id="extraTabArtist" role="tab">
        Artist
      </button> <button aria-controls="extraPanelAlbum" id="extraTabAlbum" role="tab">
        Album
      </button> <button aria-controls="extraPanelYouTube" id="extraTabYouTube" role="tab" title="YouTube"><i class="fa fa-youtube-play"></i></button></div>
    <div class="panes">
      <div aria-labelledby="extraTabLyrics" id="extraPanelLyrics" role="tabpanel" tabindex="0">
        <article id="lyrics">
          <div class="content">
            <div style="display: none;">
              <div></div>
              <div class="text-zoomer"><button title="Zoom out"><i class="fa fa-search-minus"></i></button> <button title="Zoom in"><i class="fa fa-search-plus"></i></button></div>
            </div>
            <!---->
          </div>
        </article>
      </div>
      <div aria-labelledby="extraTabArtist" id="extraPanelArtist" role="tabpanel" tabindex="0" style="display: none;">
        <!---->
      </div>
      <div aria-labelledby="extraTabAlbum" id="extraPanelAlbum" role="tabpanel" tabindex="0" style="display: none;">
        <!---->
      </div>
      <div aria-labelledby="extraTabAlbum" id="extraPanelAlbum" role="tabpanel" tabindex="0" style="display: none;">
        <!---->
      </div>
    </div>
  </div>
</section>
`;

exports[`components/layout/extra-panel renders properly 1`] = `
<section id="extra" class="showing">
  <div class="tabs">
    <div role="tablist" class="clear"><button aria-selected="true" aria-controls="extraPanelLyrics" id="extraTabLyrics" role="tab">
        Lyrics
      </button> <button aria-controls="extraPanelArtist" id="extraTabArtist" role="tab">
        Artist
      </button> <button aria-controls="extraPanelAlbum" id="extraTabAlbum" role="tab">
        Album
      </button>
      <!---->
    </div>
    <div class="panes">
      <div aria-labelledby="extraTabLyrics" id="extraPanelLyrics" role="tabpanel" tabindex="0">
        <!---->
      </div>
      <div aria-labelledby="extraTabArtist" id="extraPanelArtist" role="tabpanel" tabindex="0" style="display: none;">
        <!---->
      </div>
      <div aria-labelledby="extraTabAlbum" id="extraPanelAlbum" role="tabpanel" tabindex="0" style="display: none;">
        <!---->
      </div>
      <div aria-labelledby="extraTabAlbum" id="extraPanelAlbum" role="tabpanel" tabindex="0" style="display: none;">
        <!---->
      </div>
    </div>
  </div>
</section>
`;
